# lyra

./: .gitignore
data/: runs.db
music-orchestrator/: .env  .env.example  README.md  pyproject.toml
music-orchestrator/data/: runs.db
music-orchestrator/src/lyra_orchestrator/: api.py  audio.py  cli.py  llm.py  main.py  manager.py  models.py  prompts.py  qc.py  settings.py  store.py  suno_client.py  timeline.py  workflow.py
music-orchestrator/src/music_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
music-orchestrator/tests/: test_api_contract.py  test_models.py  test_prompt_retry.py  test_qc.py  test_suno_contract.py  test_timeline.py
