[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-orchestrator"
version = "0.1.0"
description = "Stage-1 multi-agent instrumental generation orchestrator (GPT + Suno)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "openai>=1.60.0",
  "langgraph>=0.2.60",
  "typer>=0.12.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "soundfile>=0.12.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "respx>=0.21.1"
]

[project.scripts]
lyra = "lyra_orchestrator.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
